<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_tutorial"
        android:title="@string/menu_tutorial"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update"
        android:title="@string/menu_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_youtube"
        android:title="@string/menu_youtube"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_credits"
        android:title="@string/menu_credits"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dark_mode"
        android:title="@string/menu_dark_mode"
        android:checkable="true"
        app:showAsAction="never" />
</menu>